--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<title>BELLA BLOG</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="the first website"/>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="container">
