--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 	<title>BELLA BLOG</title>
 	<meta charset="utf-8"/>
-	<meta name="description" content="the first website"/>
+	<meta name="description" content="my website"/>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
