--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-	<title>BELLA BLOG</title>
+	<title>Ha Nguyen</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="my website"/>
 	<link rel="stylesheet" href="style.css">
