--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<meta charset="utf-8"/>
 	<meta name="description" content="my website"/>
 	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="/favicon.ico">
+
 </head>
 <body>
 <div id="container">
