--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 	</div><!--#content-->
 
 </div><!--#container-->
+<input type="button" id="clickme" value="Click Me"/>
+	<script language="javascript"></script>
 <script type="text/javascript" src="script.js">
 </body>
 </html>
