--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div><!--#container-->
        <input type="text" id="id_textbox" value=""/>
          
-        <input type="button" id="id_button" value="Hiển thị thông báo"/>
+        <input type="button" id="id_button" value="serch"/>
          
         <script language="javascript">
             var button = document.getElementById('id_button');
