--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 	<title>Ha Nguyen</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="my website"/>
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image/x-icon" href="favicon.ico" />
+	<meta name="keywords" content="Ha Nguyen, Designer, Digital Designer"/>
+	<meta name="author" content="Ha Nguyen"/>
+	<link rel="stylesheet" href="style.css"/>
+	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
 </head>
 <body>
@@ -59,5 +61,13 @@
                 alert(value);
             });
         </script>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-88493139-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
