--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			  <div class="row" id="box2">
 			     <H3>What i can do </H3>
 
-			     <P>- Animation.<br>- Illustration.<br>- User interfaces. </P>
+			     <P> Animation, Illustration, User interfaces. </P>
       </ul>
     </section>
 			  
