--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
     </header>
     <section>
       <ul>
-         <div class="row" id="box1">
+                           <div class="row" id="box1">
 			     <h3>A little of mysefl</h3>
-           <p>- Always try to do 110%            </p>
-		  	 </div>
+                             <p> Always try to do 110%. Learn from mistaked. Try to solving the problems as soon as possible</p>
+		  	   </div>
 
 			  <div class="row" id="box2">
 			     <H3>What i can do </H3>
 
-			     <P> Animation, Illustration, User interfaces. </P>
+			     <P>Animation, Illustration, User interfaces. And i can speak 4 languages </P>
+		          </div>
       </ul>
     </section>
 			  
