--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 	</div><!--#content-->
 
 </div><!--#container-->
+	<button style="button"  onclick="document.write('Hello')">Click here</button>
     
-        <script language="javascript">
-        <button style="button"  onclick="document.write('Hello')">Click here</button>
-		
+        <script>
         allert("you want to download it");
         
         </script>
