--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div><!--.row-->
 		<footer>
       <a href="https://www.facebook.com/ha.bonmat"><img src="http://laboomny.com/images/yootheme/facebook-1.png" alt="facebook icon" class="social-icon"></a>
-      <a href="https://www.instagram.com/haaaaanguyen/"><img src="http://i1-news.softpedia-static.com/images/news2/instagram-is-testing-multi-photo-album-support-in-new-version-512523-4.jpg" alt="facebook icon" class="social-icon"></a>		
+      <a href="https://www.instagram.com/haaaaanguyen/"><img src="https://image.flaticon.com/icons/png/512/69/69366.png" alt="facebook icon" class="social-icon"></a>		
       <a href="https://dribbble.com/Ha_NGUYEN"><img src="https://cdn0.iconfinder.com/data/icons/Social_Network_Icons_gloss/350/Dribbble-px.png" alt="dribbble icon" class="social-icon">
       </a>
         <a href="https://www.linkedin.com/in/h%C3%A0-nguy%E1%BB%85n-7a8baab8/"><img src="http://harfunmola.com//assets/img/linkedin.png" alt="twittler icon" class="social-icon"></a>
