--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	   <ul>
 		  <li><a href="projects.html">MY PROJECTS</a></li>
 	   	  <li><a href="contact.html">GET CONTACT </a></li>
-	   	  <li><a href="hobbies.html">MY HOBBIES</a></li>
+	   	  <li><a href="https://haanguyen.tk/hobbies">MY HOBBIES</a></li>
 		
 	</div>
 	<div id="content">
