--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div id="container">
 	<div id="menu">
 	   <ul>
-		  <li><a href="projects.html">MY PROJECTS</a></li>
-	   	  <li><a href="contact.html">GET CONTACT </a></li>
+		  <li><a href="https://haanguyen.tk/projects">MY PROJECTS</a></li>
+	   	  <li><a href="https://haanguyen.tk/contact">GET CONTACT </a></li>
 	   	  <li><a href="https://haanguyen.tk/hobbies">MY HOBBIES</a></li>
 		
 	</div>
