--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 		  <li><a href="https://haanguyen.tk/projects">MY PROJECTS</a></li>
 	   	  <li><a href="https://haanguyen.tk/contact">GET CONTACT </a></li>
 	   	  <li><a href="https://haanguyen.tk/hobbies">MY HOBBIES</a></li>
+		    <div id="Contact">
+		   <div class="contact-top">
+			<img src="img/Eric.png">
+			<div class="coloredBg">
+				<button class="close-btn"></button>
+			</div>
+		  </div>
+		  <div class="contact-content">
+			<p>HELLO visitor! I'm <b>HA</b>, and I design visual interfaces.</p>
+			<p>
+				I have <b>1 years of experience</b> designing, improving and shipping web applications.<br> I'm currently living in <b>Singapore</b>, so if you feel like having me in your team, drop me a line and let's have a cup of coffee!
+			</p>
 		
 	</div>
 	<div id="content">
