--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <div id="container">
 	<div id="menu">
 	   <ul>
-		  <li><a href="https://haanguyen.tk/projects">MY PROJECTS</a></li>
-	   	  <li><a href="https://haanguyen.tk/contact">GET CONTACT </a></li>
-	   	  <li><a href="https://haanguyen.tk/hobbies">MY HOBBIES</a></li>
+		  <li><a href="https://haanguyen.tk/projects.html">MY PROJECTS</a></li>
+	   	  <li><a href="https://haanguyen.tk/contact.html">GET CONTACT </a></li>
+	   	  <li><a href="https://haanguyen.tk/hobbies.html">MY HOBBIES</a></li>
 		  
 		
 	</div>
