--- a/hobbies.html
+++ b/hobbies.html
@@ -14,10 +14,7 @@
 	 
 	<div id="content">
 	<header>
-		    <div id="logo"><img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/22090093_1352220571542762_1369238655853111167_n.jpg?oh=ec759a8828f158b9e9473e7abc900a8c&oe=5A480758" alt"logo" width="30" height="30"></div>
-		    <dive id="slogan">
-		   
-		       <p>HELLO.<br>My name Ha.</p>
+		       <p><h1>HELLO.<br>My name Ha.</p>
         </div>
         
     </header>
