--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="container">
-	  <li><a href="https://haanguyen.tk"><img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" max-width="25%"></a>
+	  <li><a href="https://haanguyen.tk"><img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" width="32" height="21"></a>
 	   
 	     
 	 
