--- a/hobbies.html
+++ b/hobbies.html
@@ -14,7 +14,10 @@
 	 
 	<div id="content">
 	<header>
-		       <p><h1>HELLO.<br>My name Ha.</p>
+		       <p>HELLO.<br>My name Ha.
+		        <span style="text-align: center">Canh giữa văn bản</span>
+			<span style="font-family: Helvetica, Arial">Font chữ Arial</span>     
+		        </p>      
         </div>
         
     </header>
