--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,8 @@
 	<title>MY HOBBIES</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="photograper"/>
+	<link rel="stylesheet" href="style.css"/>
+	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
 	
 </head>
 <body>
