--- a/hobbies.html
+++ b/hobbies.html
@@ -16,8 +16,8 @@
 	 
 	<div id="content">
 	<header>
-		<p style="text-align: center; color: grey"><srong>MY NAME HA<br>This Is Me</strong></p>
-		<div id="logo"<img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-0/p206x206/21192126_1325901594174660_6115529376189044780_n.jpg?_nc_eui2=v1%3AAeGGqxQsJV4MmdvMXz5tpEkHW31d1WanMYeEOMloo8nC_sEiyvxgn28X1yHRu8-FSR-vKQ3ITvmjQJqwzyBAUCbit1H-mioOzZ-PB6l9_M_9cg&oh=8113905f9e403b4410184928aeabed9b&oe=5A75C7C7"     
+		<p style="text-align: center; color: grey"><strong>MY NAME HA<br>This Is Me</strong></p>
+		<div id="logo"<img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/14650669_1031387113626111_8278880943272304498_n.jpg?_nc_eui2=v1%3AAeHxuUAjdAhs9KpgD6nBwQh4VWUOm8Ote9rkRVodMq7yPe2s8oI3JrDWEpFCqHxLymmvmmW42qDiIU6WhvZoKFHEE38giRrTEoqjxRgToCas0Q&oh=d514366a0449f0725190364864b57e39&oe=5A430E91"     
 		alt"logo"></div>
         
         </header>
