--- a/hobbies.html
+++ b/hobbies.html
@@ -17,8 +17,8 @@
 	<div id="content">
 	<header>
 		<p style="text-align: center; color: grey"><strong>MY NAME HA<br>This Is Me</strong></p>
-		<div id="logo"<img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/14650669_1031387113626111_8278880943272304498_n.jpg?_nc_eui2=v1%3AAeHxuUAjdAhs9KpgD6nBwQh4VWUOm8Ote9rkRVodMq7yPe2s8oI3JrDWEpFCqHxLymmvmmW42qDiIU6WhvZoKFHEE38giRrTEoqjxRgToCas0Q&oh=d514366a0449f0725190364864b57e39&oe=5A430E91"     
-		alt"logo"></div>
+		<img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/14650669_1031387113626111_8278880943272304498_n.jpg?_nc_eui2=v1%3AAeHxuUAjdAhs9KpgD6nBwQh4VWUOm8Ote9rkRVodMq7yPe2s8oI3JrDWEpFCqHxLymmvmmW42qDiIU6WhvZoKFHEE38giRrTEoqjxRgToCas0Q&oh=d514366a0449f0725190364864b57e39&oe=5A430E91"     
+		border-radius="50%" -moz-border-radius="50%" -webkit-border-radius="50%"/>
         
         </header>
    
