--- a/hobbies.html
+++ b/hobbies.html
@@ -18,7 +18,7 @@
 	<header>
 		<p style="text-align: center; color: grey"><strong>MY NAME HA<br>This Is Me</strong></p>
 		<img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/14650669_1031387113626111_8278880943272304498_n.jpg?_nc_eui2=v1%3AAeHxuUAjdAhs9KpgD6nBwQh4VWUOm8Ote9rkRVodMq7yPe2s8oI3JrDWEpFCqHxLymmvmmW42qDiIU6WhvZoKFHEE38giRrTEoqjxRgToCas0Q&oh=d514366a0449f0725190364864b57e39&oe=5A430E91"     
-		border="3" align="center"/>
+		border="3" align="center" weight="50" height="50"/>
         
         </header>
    
