--- a/hobbies.html
+++ b/hobbies.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY HOBBIES</title>
+	<title>MY CONTACT</title>
 	<meta charset="utf-8"/>
-	<meta name="description" content="photograper"/>
+	<meta name="description" content="personal contact"/>
 	<link rel="stylesheet" href="style.css"/>
 	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
 	
