--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 	<header>
 		    <div id="logo"><img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"logo"></div>
 		    <dive id="slogan">
-		       <p>HELLO.<br>welcome to my website.</p>
+		       <p style="font-size:32px">Hello.<br>welcome to my website.</p>
         </dive>
     </header>
     <section>
       <ul>
                            <div class="row" id="box1">
 			     <h3>A little of mysefl</h3>
-                             <p> Always try to do 110%. Learn from mistaked. Try to solving the problems as soon as possible</p>
+                             <p style="font-size:20px"> Always try to do 110%. Learn from mistaked. Try to solving the problems as soon as possible</p>
 		  	   </div>
 
 			  <div class="row" id="box2">
 			     <H3>What i can do </H3>
 
-			     <P>Animation, Illustration, User interfaces. And i can speak 4 languages </P>
+ 			     <p style="font-size:20px">Animation, Illustration, User interfaces. And i can speak 4 languages </P>
 		          </div>
       </ul>
     </section>
