--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<header>
 		    <div id="logo"><img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"logo"></div>
 		    <dive id="slogan">
-		       <p style="font-size:32px">Hello.<br>welcome to my website.</p>
+		       <p style="font-size:32px">Hello.<br>Welcome to my website.</p>
         </dive>
     </header>
     <section>
