--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
 	 
 	<div id="content">
 	<header>
-		<p style="text-align: center; color: #243b55; font-size:32px">I DO LOVE CREATIVE AND TRAVEL<br>Here is phot of of it</p>
+		<p style="text-align: center; color: #243b55; font-size:32px">I <strong>love</strong> travel.<br>Here is story about my adventure </p>
 		
                  
         </header>
