--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,7 @@
 			  
 		
 		<footer>
-                <li><a style="text-align: left; color: grey; font-size:20px"; href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"></a>Crazy Trip By Scooter Alone</li>
+                <li><a align="left";color: grey; font-size:20px; href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"></a>Crazy Trip By Scooter Alone</li>
                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbybus"></a>Crazy Trip By Bus From Vietanm To Malaysia at Midnight</li>
                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooterpart2"></a>Crazy Trip By Scooter Part 2 Supper Fast</li>
           
