--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,7 @@
 			  
 		
 		<footer>
-                <li><a align="left";color: grey; font-size:20px; href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"></a>Crazy Trip By Scooter Alone</li>
+                <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"><img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308"</a>Crazy Trip By Scooter Alone</li>
                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbybus"></a>Crazy Trip By Bus From Vietanm To Malaysia at Midnight</li>
                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooterpart2"></a>Crazy Trip By Scooter Part 2 Supper Fast</li>
           
