--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,13 @@
 </head>
 <body>
 <div id="container">
-	  <li><a href="https://haanguyen.tk"><img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" width="56" height="33" align="left" ></a>
+	<style>
+		.smaller-image{
+			width: 100px;
+			border-radius: 10px;
+		}
+	</style>
+	  <li><a href="https://haanguyen.tk"><img class="smaller-image"src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left" ></a>
 	   
 	     
 	 
