--- a/hobbies.html
+++ b/hobbies.html
@@ -14,6 +14,10 @@
 		.smaller-image{
 			width: 50px;
 			border-radius: 50px;
+		.circular-image{
+			width:200px;
+			border-radius:50%;
+			}
 		}
 	</style>
 	  <li><a href="https://haanguyen.tk"><img class="smaller-image"src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left" ></a>
@@ -30,15 +34,15 @@
 		<footer>
 			
 	          <p Crazy Trip By Scooter Alone.>
-                  <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"><img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308" width="150" height="150" align="left"></li>
+                  <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308""></li>
 		   </p>
 			
 	         <p Crazy Trip By Scooter Alone Part 2 Supper Fast.>
-                  <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooterpart2"><img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10848036_673043816127111_3885746758032542159_n.jpg?_nc_eui2=v1%3AAeHpgMxu-ore2BxpBvDsMbKRui2L6_Dbwu6NIG7o7WOPPn-_O8-9Zyg0UD8ebXF6_XenwbzPbUB62LUEnI_5y7n6mMVwAbDd6Hh17rrXdM5d9g&oh=b29ef1fcb787242fc4b713690e539577&oe=5A869DE5" width="150" height="150" align="left"></li>
+                  <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooterpart2"><img class="circular-image"src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10848036_673043816127111_3885746758032542159_n.jpg?_nc_eui2=v1%3AAeHpgMxu-ore2BxpBvDsMbKRui2L6_Dbwu6NIG7o7WOPPn-_O8-9Zyg0UD8ebXF6_XenwbzPbUB62LUEnI_5y7n6mMVwAbDd6Hh17rrXdM5d9g&oh=b29ef1fcb787242fc4b713690e539577&oe=5A869DE5"></li>
 		  </p>
 			
 		 <p Crazy Trip By Bus From Vietnam To Malaysia at Midnight.>
-                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbybus"><img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/11196225_746674548764037_2895525540082783623_n.jpg?_nc_eui2=v1%3AAeFXxirqsKhBSMtLSM5v749yUl7SEqqwFOBn9SthH9Idbw_w6sK-a_ZfqEexOfPriMy-pglIAtnH-YGTNX92wEY35BtTBvz7Jaik5LrW2b-dbw&oh=4c38bd0025f6878c288b62b406d6d76f&oe=5A791E3D" width="150" height="150" align="left"></li>
+                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbybus"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/11196225_746674548764037_2895525540082783623_n.jpg?_nc_eui2=v1%3AAeFXxirqsKhBSMtLSM5v749yUl7SEqqwFOBn9SthH9Idbw_w6sK-a_ZfqEexOfPriMy-pglIAtnH-YGTNX92wEY35BtTBvz7Jaik5LrW2b-dbw&oh=4c38bd0025f6878c288b62b406d6d76f&oe=5A791E3D" width="150"></li>
 		</p>
 			
 		</footer>
