--- a/hobbies.html
+++ b/hobbies.html
@@ -38,11 +38,11 @@
 		   </p>
 			
 	         <p Crazy Trip By Scooter Alone Part 2 Supper Fast.>
-                  <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooterpart2"><img class="circular-image"src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10848036_673043816127111_3885746758032542159_n.jpg?_nc_eui2=v1%3AAeHpgMxu-ore2BxpBvDsMbKRui2L6_Dbwu6NIG7o7WOPPn-_O8-9Zyg0UD8ebXF6_XenwbzPbUB62LUEnI_5y7n6mMVwAbDd6Hh17rrXdM5d9g&oh=b29ef1fcb787242fc4b713690e539577&oe=5A869DE5"></li>
+                  <li><a href="https://haanguyen.tk/hobbies.html/crazytripbyscooterpart2"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10848036_673043816127111_3885746758032542159_n.jpg?_nc_eui2=v1%3AAeHpgMxu-ore2BxpBvDsMbKRui2L6_Dbwu6NIG7o7WOPPn-_O8-9Zyg0UD8ebXF6_XenwbzPbUB62LUEnI_5y7n6mMVwAbDd6Hh17rrXdM5d9g&oh=b29ef1fcb787242fc4b713690e539577&oe=5A869DE5"></li>
 		  </p>
 			
 		 <p Crazy Trip By Bus From Vietnam To Malaysia at Midnight.>
-                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbybus"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/11196225_746674548764037_2895525540082783623_n.jpg?_nc_eui2=v1%3AAeFXxirqsKhBSMtLSM5v749yUl7SEqqwFOBn9SthH9Idbw_w6sK-a_ZfqEexOfPriMy-pglIAtnH-YGTNX92wEY35BtTBvz7Jaik5LrW2b-dbw&oh=4c38bd0025f6878c288b62b406d6d76f&oe=5A791E3D" width="150"></li>
+                 <li><a href="https://haanguyen.tk/hobbies.html/crazytripbybus"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/11196225_746674548764037_2895525540082783623_n.jpg?_nc_eui2=v1%3AAeFXxirqsKhBSMtLSM5v749yUl7SEqqwFOBn9SthH9Idbw_w6sK-a_ZfqEexOfPriMy-pglIAtnH-YGTNX92wEY35BtTBvz7Jaik5LrW2b-dbw&oh=4c38bd0025f6878c288b62b406d6d76f&oe=5A791E3D"></li>
 		</p>
 			
 		</footer>
