--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 			border-radius: 50px;
 		}
 	</style>
-	  <a href="https://haanguyen.tk"><img class="smaller-image"src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left" ></a>
+	 <a href="https://haanguyen.tk"><img class="smaller-image"src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"/>
 	   
 	     
 	 
@@ -25,7 +25,7 @@
 		<p style="text-align: center; color: #243b55; font-size:32px">My name <strong>Ha</strong><br>And this is me</p>
 		<img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/14650669_1031387113626111_8278880943272304498_n.jpg?_nc_eui2=v1%3AAeHxuUAjdAhs9KpgD6nBwQh4VWUOm8Ote9rkRVodMq7yPe2s8oI3JrDWEpFCqHxLymmvmmW42qDiIU6WhvZoKFHEE38giRrTEoqjxRgToCas0Q&oh=d514366a0449f0725190364864b57e39&oe=5A430E91"     
 		border="3" align="center" weight="150" height="150"/>
-                 <p style="text-align: left; color: grey; font-size:20px">Currently I'm working for a Singapore company but i live in Vietnam.<br>Let me know if you want to talk or have cup coffee with me.</P>
+                 <p style="text-align: left; color: grey; font-size:20px">Currently I'm working for a Singapore company but i live in Vietnam.<br>Let me know if you want to talk or have cup coffee with me.</p>
 		
         </header>
    
