--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="author" content="Ha Nguyen"/>
 	<link rel="stylesheet" href="style.css"/>
 	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 
 </head>
 <body>
