--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="personal contact"/>
 	<link rel="stylesheet" href="style.css"/>
 	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	
 </head>
 <body>
