--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 		
 		<footer>
 		<div class="row">
-                <div class="col-xs-4"><button class="btn btn-block btn-primary" href="mailto:ngocha1991qn@gmail">Send Email</button></div>
-                <div class=col-xs-4"><button class="btn btn-block btn-primary" href="callto:+84935742162">Call Me</button></div>
+                <div class="col-xs-4"><a style="botton"  href="mailto:ngocha1991qn@gmail">Send Email</a></div>
+                <div class=col-xs-4"><a style="botton" href="callto:+84935742162">Call Me</a></div>
 		 </div>											 
           
 		</footer>
