--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 		
 		<footer>
 		<div class="row">
-                <div class="col-xs-4"><a style="botton"  href="mailto:ngocha1991qn@gmail">Send Email</a></div>
-                <div class=col-xs-4"><a style="botton" href="callto:+84935742162">Call Me</a></div>
+                <div class="col-xs-4"><a href="mailto:ngocha1991qn@gmail"><i class="fa fa-email"></i>Send Email</a></div>
+                <div class=col-xs-4"><a style="botton" href="callto:+84935742162"><i class="fa fa-call"></i>Call Me</a></div>
 		 </div>											 
           
 		</footer>
