--- a/hobbies.html
+++ b/hobbies.html
@@ -33,8 +33,7 @@
    
 		<footer>
 		<div class="row">	
-	          <div class="col-xs-4"><p>Crazy Trip By Scooter Alone.
-                  <a href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308"">
+	          <div class="col-xs-4"><p>Crazy Trip By Scooter Alone.<a href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308">
 			  </p></div>
 			
 	         <div class="col-xs-4"><p>Crazy Trip By Scooter Alone Part 2 Supper Fast.
