--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 	   
 	     
 	 
-	<div id="content">
+	<div id="jumbotrun">
 	<header>
 		<div class="row">
 		<div class="col-xs-8"><p style="color: #243b55; font-size:32px">My name <strong>Ha</strong><br>And this is me</p></div>
