--- a/hobbies.html
+++ b/hobbies.html
@@ -32,8 +32,10 @@
         </header>
    
 		<footer>
+	     <div class="blk content">
 		<div class="row">	
-	          <div class="col-xs-4"><p>Crazy Trip By Scooter Alone.<a href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308">
+	          <div class="col-xs-4"><p>Crazy Trip By Scooter Alone.
+	          <a href="https://haanguyen.tk/hobbies.html/crazytripbyscooter"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308">
 			  </p></div>
 			
 	         <div class="col-xs-4"><p>Crazy Trip By Scooter Alone Part 2 Supper Fast.
@@ -44,6 +46,10 @@
                  <a href="https://haanguyen.tk/hobbies.html/crazytripbybus"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/11196225_746674548764037_2895525540082783623_n.jpg?_nc_eui2=v1%3AAeFXxirqsKhBSMtLSM5v749yUl7SEqqwFOBn9SthH9Idbw_w6sK-a_ZfqEexOfPriMy-pglIAtnH-YGTNX92wEY35BtTBvz7Jaik5LrW2b-dbw&oh=4c38bd0025f6878c288b62b406d6d76f&oe=5A791E3D">
 		</p></div>
 		 </div>	
+	    </div>  
+	    <div class="blk sideblock sideblock_01">Sideblock 01</div>
+            <div class="blk sideblock sideblock_02">Sideblock 02</div>
+            <div class="blk footer">This is the footer</div>	
 		</footer>
 			 
 	</div><!--#content-->
