--- a/hobbies.html
+++ b/hobbies.html
@@ -47,9 +47,9 @@
 		</p></div>
 		 </div>	
 	    </div>  
-	    <div class="blk sideblock sideblock_01">Sideblock 01</div>
-            <div class="blk sideblock sideblock_02">Sideblock 02</div>
-            <div class="blk footer">This is the footer</div>	
+	    <div class="blk sideblock sideblock_01" style="color:grey;grid-area: sideblock_01">Sideblock 01</div>
+            <div class="blk sideblock sideblock_02" style="color:grey;grid-area: sideblock_01">Sideblock 02</div>
+            <div class="blk footer" style="color: blue;grid-area: footer">This is the footer</div>	
 		</footer>
 			 
 	</div><!--#content-->
