--- a/hobbies.html
+++ b/hobbies.html
@@ -11,6 +11,13 @@
 <body>
 <div id="container">
 	<style>
+		grid-template-columns: 14% 65% 18%;
+                grid-gap: 20px;
+                grid-template-areas:
+                "header header header"
+                "sidebar content sideblock_01"
+                "sidebar content sideblock_02"
+                "footer footer footer";
 		.smaller-image{
 			width: 50px;
 			border-radius: 50px;
