--- a/hobbies.html
+++ b/hobbies.html
@@ -16,9 +16,26 @@
 			border-radius: 50px;
 		        }
 		.circular-image{
-			width: 50px;
+			width: 100px;
 			border-radius: 50%;
 			}
+		 .row {
+		overflow: auto;
+                  margin: 1.5em auto;
+                   }
+		.row .col {
+		float: left;
+	        width: 31.333%;
+	        margin-right: 2.99% ;
+		}
+		.row .col:last-child {
+                float: right;
+                margin-right: 0;
+                }
+		.row .col img {
+               float: left;
+                margin-right: 1em;
+                }
 		
 	</style>
 	  <a href="https://haanguyen.tk"><img class="smaller-image"src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left" ></a>
