--- a/hobbies.html
+++ b/hobbies.html
@@ -52,11 +52,11 @@
 		<footer>
 	    
 		<div class="row">	
-			<div class="col"><p>Crazy Trip By Scooter Alone.</p>
+			<div class="col"><p>Crazy Trip 1800km By Scooter Alone.</p>
 	          <a href="#"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10384190_668915273206632_2709640604424333194_n.jpg?_nc_eui2=v1%3AAeFI2TVbtS92SHFY4gYs3AfnHaE9A2Qd89vt5IBZwKalYfK6q21OLu8coX5OPpNryMzoPGTGgIrZ93o-_GstWG0zQj5dXZGFMi2zbwxeIKietw&oh=909a58e1ef2d2b8abcc121ecfce04453&oe=5A3E0308">
 			  </div>
 			
-			<div class="col"><p>Crazy Trip By Scooter Alone Part 2 Supper Fast.</p>
+			<div class="col"><p>Crazy Trip 900km By Scooter Alone Part 2 Supper Fast.</p>
                   <a href="#"><img class="circular-image" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/10848036_673043816127111_3885746758032542159_n.jpg?_nc_eui2=v1%3AAeHpgMxu-ore2BxpBvDsMbKRui2L6_Dbwu6NIG7o7WOPPn-_O8-9Zyg0UD8ebXF6_XenwbzPbUB62LUEnI_5y7n6mMVwAbDd6Hh17rrXdM5d9g&oh=b29ef1fcb787242fc4b713690e539577&oe=5A869DE5">
 		  </div>
 			
