--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@ $(document).ready(function(){
 </script>
 
 <style> 
-#panel, #flip {
+#flip {
     padding: 5px;
     text-align: center;
     border: solid 2px #c3c3c3;
+    text-shadow:4px 4px 8px;
 }
 
 #panel {
+    padding : 10px ;
     display: none;
     background-color: #e7eeff;
 }
