--- a/index.html
+++ b/index.html
@@ -52,23 +52,6 @@ $(document).ready(function(){
 });
 </script>
 
-<style> 
-#flip {
-    padding: 5px;
-    text-align: center;
-    border: solid 2px #c3c3c3;
-    text-shadow:4px 4px 8px;
-}
-
-#panel {
-    padding : 10px ;
-    display: none;
-    background-color: #e7eeff;
-}
-</style>
-</head>
-<body>
- 
 <div id="flip">Click to see my Resume</div>
 <div id="panel">
   <img style="align:center; width:20%;border-radius:50%" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21192126_1325901594174660_6115529376189044780_n.jpg?oh=3eb51a939460498165e1b2aa89375c97&oe=5AA502AF">
@@ -93,7 +76,12 @@ $(document).ready(function(){
      </ul>
   </div>
   </div>
-
+      <a href="https://www.facebook.com/ha.bonmat"><img src="http://laboomny.com/images/yootheme/facebook-1.png" alt="facebook icon" class="social-icon"></a>
+      <a href="https://www.instagram.com/haaaaanguyen/"><img src="http://icons.iconarchive.com/icons/designbolts/free-instagram/256/Hover-Instagram-4-icon.png" alt="instagram icon" class="social-icon"></a>		
+      <a href="https://dribbble.com/Ha_NGUYEN"><img src="https://cdn0.iconfinder.com/data/icons/Social_Network_Icons_gloss/350/Dribbble-px.png" alt="dribbble icon" class="social-icon">
+      </a>
+        <a href="https://www.linkedin.com/in/h%C3%A0-nguy%E1%BB%85n-7a8baab8/"><img src="http://harfunmola.com//assets/img/linkedin.png" alt="twittler icon" class="social-icon"></a>
+          
       
           <p>&copy; 2017 www.haanguyen.tk</p>
 		</footer>
