--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@ $(document).ready(function(){
     });
 });
 </script>
+	<style> 
+#flip {
+    padding: 5px;
+    text-align: center;
+    text-shadow:4px 4px 8px;
+}
+
+#panel {
+    padding : 10px ;
+    display: none;
+    background-color: #e7eeff;
+}
+</style>		
 
 <div id="flip">Click to see my Resume</div>
 <div id="panel">
