--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $(document).ready(function(){
     });
 });
 </script>
-	<style> 
+<style> 
 #flip {
     padding: 5px;
     text-align: center;
@@ -87,17 +87,19 @@ $(document).ready(function(){
        <li>Business Administration Associate Degree, Danang College of economics & Planning<br>2009-2012</li>
        <li> Introductory Microsoft Office Certificate course, Duy Tan university<br>2010</li>
      </ul>
-  </div>
-  </div>
+    </div><!--resumer-->
+  </div><!--panel-->
+	</footer>			
+<div id="social nextwork>		
       <a href="https://www.facebook.com/ha.bonmat"><img src="http://laboomny.com/images/yootheme/facebook-1.png" alt="facebook icon" class="social-icon"></a>
       <a href="https://www.instagram.com/haaaaanguyen/"><img src="http://icons.iconarchive.com/icons/designbolts/free-instagram/256/Hover-Instagram-4-icon.png" alt="instagram icon" class="social-icon"></a>		
       <a href="https://dribbble.com/Ha_NGUYEN"><img src="https://cdn0.iconfinder.com/data/icons/Social_Network_Icons_gloss/350/Dribbble-px.png" alt="dribbble icon" class="social-icon">
       </a>
         <a href="https://www.linkedin.com/in/h%C3%A0-nguy%E1%BB%85n-7a8baab8/"><img src="http://harfunmola.com//assets/img/linkedin.png" alt="twittler icon" class="social-icon"></a>
-          
+  </div>    
       
           <p>&copy; 2017 www.haanguyen.tk</p>
-		</footer>
+		
 	
 
 </div><!--#container-->
