--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@ $(document).ready(function(){
 </script>
 <style> 
 #flip {
-    padding: 5px;
-    text-align: center;
     text-shadow:4px 4px 8px;
 }
 
 #panel {
     padding : 10px ;
     display: none;
-    background-color: #e7eeff;
+    background-color: rgba(167, 0, 0, 0.3);
+    
 }
 </style>		
 
@@ -70,7 +69,7 @@ $(document).ready(function(){
   <img style="align:center; width:20%;border-radius:50%" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21192126_1325901594174660_6115529376189044780_n.jpg?oh=3eb51a939460498165e1b2aa89375c97&oe=5AA502AF">
  
   <h3><strong> NGUYEN THI NGOC HA</strong></h3>
-   <div id="resume" style="text-align: left; color:grey"> 
+   <div id="resume" style="text-align: left;"> 
     <h4> Skills & Aptitude</h4>
     <hr/>
      <ul>
