--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(document).ready(function(){
     </div><!--resumer-->
   </div><!--panel-->
 	</footer>			
-<div id="social nextwork>		
+<div id="social nextwork">		
       <a href="https://www.facebook.com/ha.bonmat"><img src="http://laboomny.com/images/yootheme/facebook-1.png" alt="facebook icon" class="social-icon"></a>
       <a href="https://www.instagram.com/haaaaanguyen/"><img src="http://icons.iconarchive.com/icons/designbolts/free-instagram/256/Hover-Instagram-4-icon.png" alt="instagram icon" class="social-icon"></a>		
       <a href="https://dribbble.com/Ha_NGUYEN"><img src="https://cdn0.iconfinder.com/data/icons/Social_Network_Icons_gloss/350/Dribbble-px.png" alt="dribbble icon" class="social-icon">
