--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<meta charset="utf-8"/>
 	<meta name="description" content="my website"/>
 	<meta name="keywords" content="Ha Nguyen, Designer, Digital Designer"/>
-	<meta name="author" content="Ha Nguyen"/>
 	<link rel="stylesheet" href="style.css"/>
 	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
