--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
 	<div id="content">
 	<header>
 		    <div id="logo"><img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"logo"></div>
-		    <dive id="slogan">
-			    <p style="font-size:32px"><strong>Hello.</strong><br>Welcome to my website.</p>
-        </dive>
-    </header>
-    <section>
-      <ul>
+		    <div id="slogan"><p style="font-size:32px"><strong>Hello.</strong><br>Welcome to my website.</p></div>
+       </header>
+       <section>
+          <ul>
                            <div class="row" id="box1">
 			     <h3>A little of mysefl</h3>
                              <p style="font-size:20px"> Always try to do 110%. Learn from mistaked. Try to solving the problems as soon as possible</p>
@@ -38,8 +36,8 @@
 
  			     <p style="font-size:20px">Animation, Illustration, User interfaces. And i can speak 4 languages </P>
 		          </div>
-      </ul>
-    </section>
+        </ul>
+     </section>
 			  
 		</div><!--.content-->
 		<footer>
@@ -66,7 +64,7 @@ $(document).ready(function(){
 
 <div id="flip">Click to see my Resume</div>
 <div id="panel">
-  <img style="align:center; width:20%;border-radius:50%" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21192126_1325901594174660_6115529376189044780_n.jpg?oh=3eb51a939460498165e1b2aa89375c97&oe=5AA502AF">
+  <img class="smaller-image" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21192126_1325901594174660_6115529376189044780_n.jpg?oh=3eb51a939460498165e1b2aa89375c97&oe=5AA502AF">
  
   <h3><strong> NGUYEN THI NGOC HA</strong></h3>
    <div id="resume" style="text-align: left;"> 
