--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="container">
-	 <a href="https://haanguyen.tk"><img class="smaller-image" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"></a>
+	 <a href="https://haanguyen.tk"><img class="home" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"></a>
 	   
 	     
 	 
@@ -20,7 +20,7 @@
 	<header>
 		<div class="row">
 		<div class="col-xs-8"><p style="color: #243b55; font-size:32px">My name <strong>Ha</strong><br>And this is me</p></div>
-		<div class="col-xs-4";"smaller-image"><img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/14650669_1031387113626111_8278880943272304498_n.jpg?_nc_eui2=v1%3AAeHxuUAjdAhs9KpgD6nBwQh4VWUOm8Ote9rkRVodMq7yPe2s8oI3JrDWEpFCqHxLymmvmmW42qDiIU6WhvZoKFHEE38giRrTEoqjxRgToCas0Q&oh=d514366a0449f0725190364864b57e39&oe=5A430E91"     
+		<div class="col-xs-4"><img style="border-radius:50%" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/14650669_1031387113626111_8278880943272304498_n.jpg?_nc_eui2=v1%3AAeHxuUAjdAhs9KpgD6nBwQh4VWUOm8Ote9rkRVodMq7yPe2s8oI3JrDWEpFCqHxLymmvmmW42qDiIU6WhvZoKFHEE38giRrTEoqjxRgToCas0Q&oh=d514366a0449f0725190364864b57e39&oe=5A430E91"     
 					   border="3"/></div>
                  <p style="text-align: left; color: grey; font-size:20px">Currently I'm working for a Singapore company but i live in Vietnam.<br>Let me know if you want to talk or have cup coffee with me.</p>
 		</div>
