--- a/hobbies.html
+++ b/hobbies.html
@@ -35,7 +35,7 @@
                 }
 		
 	</style>
-	  <a href="https://haanguyen.tk"><img class="smaller-image"src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left" ></a>
+	  <a href="https://haanguyen.tk"><img class="home"src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left" ></a>
 	   
 	     
 	 
