--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div id="content">
 	<header>
 		    <div id="logo"><img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"logo"></div>
-		    <div id="slogan"><p style="font-size:32px"><strong>Hello.</strong><br>Welcome to my website.</p></div>
+		    <div id="slogan"><h1><strong>Hello.</strong><br>Welcome to my website.</h1></div>
        </header>
        <section>
           <ul>
