--- a/hobbies.html
+++ b/hobbies.html
@@ -62,43 +62,43 @@ div.desc {
 </head>
 <body>
 
-<h2>Responsive Image Gallery</h2>
-<h4>Resize the browser window to see the effect.</h4>
+<h2>I'M DYNALIC GIRL</h2>
+<h4>Enjoy my trips with me</h4>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_fjords.jpg">
-      <img src="img_fjords.jpg" alt="Trolltunga Norway" width="300" height="200">
+    <a target="_blank" href="#">
+      <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y4/r/-PAXP-deijE.gif" alt="LANGKAWI" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">great sunset in langkawi</div>
   </div>
 </div>
 
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+    <a target="_blank" href="#">
+      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/15940901_1111043578993797_8697687258955284648_n.jpg?oh=e1bd92bad8acc0ccc3a61a81db586326&oe=5AA300FF" alt="France" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">France big culture</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href="#">
+      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/13091930_918441228254034_7116332144553467973_n.jpg?oh=e9c9bc2510c1c912aff782308c3c4322&oe=5AA70F61" alt="brumo" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">camping in great lake near Brumo Indonesia</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="#">
+      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/12745583_872784729486351_8025807232252533890_n.jpg?oh=54834303beccb935cbc75651f5d5fbf6&oe=5AA209D7" alt="PENANG" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Peaceful Penang</div>
   </div>
 </div>
 
