--- a/hobbies.html
+++ b/hobbies.html
@@ -68,7 +68,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
-      <img src="https://static.xx.fbcdn.net/rsrc.php/v3/y4/r/-PAXP-deijE.gif" alt="LANGKAWI" width="600" height="400">
+      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/18056655_1206989566065864_3240107116509460626_n.jpg?oh=c7139cef2b0e41c51a9a0fca8702337c&oe=5A6E12C6" alt="LANGKAWI" width="600" height="400">
     </a>
     <div class="desc">great sunset in langkawi</div>
   </div>
@@ -96,7 +96,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
-      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/12745583_872784729486351_8025807232252533890_n.jpg?oh=54834303beccb935cbc75651f5d5fbf6&oe=5AA209D7" alt="PENANG" width="600" height="400">
+      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/12321657_872784622819695_3423911105129064425_n.jpg?oh=8f4f93886bda4ce8b00dbf47e3fe95d1&oe=5AAAB7B7" alt="PENANG" width="600" height="400">
     </a>
     <div class="desc">Peaceful Penang</div>
   </div>
