--- a/hobbies.html
+++ b/hobbies.html
@@ -61,16 +61,14 @@ div.desc {
 </style>
 </head>
 <body>
-
-<h2>I'M DYNALIC GIRL</h2>
-<h4>Enjoy my trips with me</h4>
+<p  style="text-align:center;text-size:32px; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</p>
 
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
       <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/18056655_1206989566065864_3240107116509460626_n.jpg?oh=c7139cef2b0e41c51a9a0fca8702337c&oe=5A6E12C6" alt="LANGKAWI" width="600" height="400">
     </a>
-    <div class="desc">great sunset in langkawi</div>
+    <div class="desc">Langkawi,city of water sport</div>
   </div>
 </div>
 
@@ -89,7 +87,7 @@ div.desc {
     <a target="_blank" href="#">
       <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/13091930_918441228254034_7116332144553467973_n.jpg?oh=e9c9bc2510c1c912aff782308c3c4322&oe=5AA70F61" alt="brumo" width="600" height="400">
     </a>
-    <div class="desc">camping in great lake near Brumo Indonesia</div>
+    <div class="desc">camping in Brumo Indonesia</div>
   </div>
 </div>
 
