--- a/hobbies.html
+++ b/hobbies.html
@@ -61,8 +61,16 @@ div.desc {
 </style>
 </head>
 <body>
+<div id="container">
+	 <a href="https://haanguyen.tk"><img class="home" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"></a>
+	   
+	     
+	 
+	<div id="content">
+	<header>
 <p  style="text-align:center;text-size:32px; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</p>
-
+	</header>
+	<footer>
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
@@ -106,6 +114,6 @@ div.desc {
   <p>I do love travel.</p>
   <p>I will discover all the world.</p>
 </div>
-
+</footer>
 </body>
 </html>
