--- a/hobbies.html
+++ b/hobbies.html
@@ -68,9 +68,9 @@ div.desc {
 	 
 	<div id="content">
 	<header>
-<p  style="text-align:center;text-size:32px; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</p>
+<p  style="text-align:center;text-size:5em; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</p>
 	</header>
-	<footer>
+	
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
@@ -114,6 +114,6 @@ div.desc {
   <p>I do love travel.</p>
   <p>I will discover all the world.</p>
 </div>
-</footer>
+
 </body>
 </html>
