--- a/hobbies.html
+++ b/hobbies.html
@@ -12,20 +12,20 @@
 <body>
 <div id="container">
 	<style>
-div.gallery {
+.gallery {
     border: 1px solid #ccc;
 }
 
-div.gallery:hover {
+.gallery:hover {
     border: 1px solid #777;
 }
 
-div.gallery img {
+.gallery img {
     width: 100%;
     height: auto;
 }
 
-div.desc {
+.desc {
     padding: 15px;
     text-align: center;
 }
@@ -62,7 +62,7 @@ div.desc {
 </head>
 <body>
 <div id="container">
-	 <a href="https://haanguyen.tk"><img class="home" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"></a>
+	 <a href="https://haanguyen.tk"><img style="width:50px;border-radius:50px;" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"></a>
 	   
 	     
 	 
