--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="container">
-	 <a href="https://haanguyen.tk"><img style="width:50px;border-radius:50px;padding:5px" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"></a>
+	 <a href="https://haanguyen.tk"><img style="width:50px;border-radius:50px;margin:7px" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=39971b9a85c6db74780cca15a8af5703&oe=5A22BFBE" alt"home" align="left"></a>
 	   
 	     
 	 
