--- a/hobbies.html
+++ b/hobbies.html
@@ -68,7 +68,7 @@
 	 
 	<div id="content">
 	<header>
-<p  style="text-align:center;text-size:15em; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</p>
+<h2 style="text-align:center;text-size:15em; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</h2>
 	</header>
 	
 <div class="responsive">
