--- a/hobbies.html
+++ b/hobbies.html
@@ -70,7 +70,7 @@
 	<header>
 <p style="font-size:32px; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</p>
 	</header>
-	
+	<footer>
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
@@ -107,13 +107,10 @@
     <div class="desc">Peaceful Penang</div>
   </div>
 </div>
-
-<div class="clearfix"></div>
-
-<div style="padding:6px;">
+<div style="padding:10px;">
   <p>I do love travel.</p>
   <p>I will discover all the world.</p>
 </div>
-
+</footer>
 </body>
 </html>
