--- a/hobbies.html
+++ b/hobbies.html
@@ -40,18 +40,6 @@
     width: 24.99999%;
 }
 
-@media only screen and (max-width: 700px){
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 500px){
-    .responsive {
-        width: 100%;
-    }
-}
 
 .clearfix:after {
     content: "";
@@ -68,7 +56,7 @@
 	 
 	<div id="content">
 	<header>
-<p style="font-size:32px; color:#243b55">I'm dynalic girl<br>Enjoy my trips with me</p>
+<p style="font-size:32px; color:#243b55">I'm dynamic girl<br>Enjoy my trips with me</p>
 	</header>
 	<footer>
 <div class="responsive">
