--- a/hobbies.html
+++ b/hobbies.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 <div id="container">
-	<a href="https://haanguyen.tk"><img style="width:50px;border-radius:50px;" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=d709f30b2a3bc9413dab68659aec9409&oe=5A9966BE"></a>
+	<a href="https://haanguyen.tk"><img style="width:50px;border-radius:50px;" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=d709f30b2a3bc9413dab68659aec9409&oe=5A9966BE" alt"home" align="left"></a>
 	     
 	 
 	<div id="content">
