--- a/hobbies.html
+++ b/hobbies.html
@@ -21,8 +21,8 @@
 }
 
 .gallery img {
-    width: 100%;
-    height: auto;
+    width: 100px ;
+    height: 150px;
 }
 
 .desc {
@@ -63,7 +63,7 @@
     <a target="_blank" href="#">
       <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/18056655_1206989566065864_3240107116509460626_n.jpg?oh=c7139cef2b0e41c51a9a0fca8702337c&oe=5A6E12C6" alt="LANGKAWI" width="600" height="400">
     </a>
-    <div class="desc">Langkawi,city of water sport</div>
+    <div class="desc">Langkawi, city of water sport</div>
   </div>
 </div>
 
