--- a/hobbies.html
+++ b/hobbies.html
@@ -13,7 +13,7 @@
 <div id="container">
 	<style>
 .gallery {
-    border: 1px solid #ccc;
+    border: 3px solid #ccc;
 }
 
 .gallery:hover {
@@ -26,9 +26,9 @@
 }
 
 .desc {
-    padding: 5px;
-    text-align: center;
-    width: 50% ;
+    padding: 10px;
+    text-align: right;
+    width: 100% ;
 }
 
 * {
@@ -96,10 +96,7 @@
     <div class="desc">Peaceful Penang</div>
   </div>
 </div>
-<div style="padding:10px;">
-  <p>I do love travel.</p>
-  <p>I will discover all the world.</p>
-</div>
+
 </footer>
 </body>
 </html>
