--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			  <div class="row" id="box2">
 			     <H3>What i can do </H3>
 
- 			     <p style="font-size:20px">Animation, Illustration, User interfaces. And i can speak 4 languages </P>
+ 			     <p style="font-size:20px">Animation, Illustration. And i can speak 4 languages </P>
 		          </div>
         </ul>
      </section>
@@ -83,7 +83,7 @@ $(document).ready(function(){
      </ul>
      <h4>Education</h4>
      <ul>
-       <li>Certification OF Font-End, Freecodecamp<br>2017</li>
+       <li>Certification OF Completion Graphic Design Bootcamp, UDERMI<br>2017</li>
        <li>Business Administration Associate Degree, Danang College of economics & Planning<br>2009-2012</li>
        <li> Introductory Microsoft Office Certificate course, Duy Tan university<br>2010</li>
      </ul>
