--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ $(document).ready(function(){
      </ul>
      <h4>Education</h4>
      <ul>
-       <li>Certification OF Completion Graphic Design Bootcamp, UDERMI<br>2017</li>
+       <li>Certification Of Completion Graphic Design Bootcamp, Udemy <br>2017</li>
        <li>Business Administration Associate Degree, Danang College of economics & Planning<br>2009-2012</li>
        <li> Introductory Microsoft Office Certificate course, Duy Tan university<br>2010</li>
      </ul>
