--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			  <div class="row" id="box2">
 			     <H3>What i can do </H3>
 
- 			     <p style="font-size:20px">Animation, Illustration. And i can speak 4 languages </P>
+ 			     <p style="font-size:20px"> I am a visual designer in Vietnam. I specialize in illustration, branding & identity design .And i can speak English, French and Chinese </P>
 		          </div>
         </ul>
      </section>
