--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
-	<title>Ha Nguyen</title>
+	<title>Ha Nguyen Porfolio</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="my website"/>
-	<meta name="keywords" content="Ha Nguyen, Designer, Digital Designer"/>
+	<meta name="keywords" content="Ha Nguyen Designer"/>
 	<link rel="stylesheet" href="style.css"/>
 	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
