--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY CONTACT</title>
+	<title>Ha Nguyen Contact</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="personal contact"/>
 	<link rel="stylesheet" href="style.css"/>
