--- a/hobbies.html
+++ b/hobbies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY HOBBIES</title>
+	<title>Ha Nguyen Hobbies</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="personal contact"/>
 	<link rel="stylesheet" href="style.css"/>
@@ -11,7 +11,9 @@
 </head>
 <body>
 <div id="container">
+	
 	<style>
+		
 .gallery {
     border: 3px solid #ccc;
 }
@@ -22,7 +24,7 @@
 
 .gallery img {
     width: 100px ;
-    height: 100px ;
+    height: 120px ;
 }
 
 .desc {
