--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY PROJECTS</title>
+	<title>Ha Nguyen Project</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="personal projects"/>
 	<link rel="stylesheet" href="style.css"/>
