--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
 	<div id="content">
     <header>
-		    <div id="logo"><img src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=d709f30b2a3bc9413dab68659aec9409&oe=5A9966BE" alt"logo"></div>
+		    <div id="logo"><img src="logo.jpg" alt"logo"></div>
 		    <div id="slogan">
 		   <p><strong>Hello.</strong><br>Welcome to my website.</p>
 		   </div>
@@ -67,7 +67,7 @@ $(document).ready(function(){
 
 <div id="flip">Click to see my Resume</div>
 <div id="panel">
-  <img class="smaller-image" style ="width:100px;border-radius:50px" src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/21192126_1325901594174660_6115529376189044780_n.jpg?oh=3eb51a939460498165e1b2aa89375c97&oe=5AA502AF">
+  <img class="smaller-image" style ="width:100px;border-radius:50px" src="Ha.jpg">
  
   <h3><strong> NGUYEN THI NGOC HA</strong></h3>
    <div id="dome" style="text-align: left;"> 
